--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,5 @@
 @import './style/layout';
 @import './style/componentsStyle/bookList';
 @import './style/componentsStyle/moreButton';
+@import './style/componentsStyle/phone';
+@import './style/componentsStyle/sidebar';
