--- a/src/style/componentsStyle/sidebar.scss
+++ b/src/style/componentsStyle/sidebar.scss
@@ -5,6 +5,10 @@
     background: rgba(80, 168, 225, 0.9);
   }
 }
+.cart {
+  // display: flex;
+  // justify-content: center;
+}
 .btn-inverse {
   background-color: #363636;
   background-image: linear-gradient(to bottom, #444, #222);
