--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,4 @@
 @import './style/componentsStyle/moreButton';
 @import './style/componentsStyle/phone';
 @import './style/componentsStyle/sidebar';
+@import './style/componentsStyle/categories';
