--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,4 @@
 @import './style/componentsStyle/phone';
 @import './style/componentsStyle/sidebar';
 @import './style/componentsStyle/categories';
+@import './style/componentsStyle/basket';
