--- a/src/style/componentsStyle/basket.scss
+++ b/src/style/componentsStyle/basket.scss
@@ -7,6 +7,12 @@
     cursor: pointer;
   }
 }
+.btn-info,
+.btn-danger,
+.btn-success {
+  width: 100%;
+  margin-bottom: 10px;
+}
 table {
   width: 100%;
   border: none;
